Bug 1589895 - Add default JavaScript MIME type for .mjs used for ES modules. r=bzbarsky

Seems like this is the recommended MIME type for the JavaScript module system:
https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules#Basic_example_structure

Differential Revision: https://phabricator.services.mozilla.com/D52885