uriloader/exthandler/nsExternalHelperAppService.cpp
@@ -487,7 +487,7 @@ static const nsExtraMimeTypeEntry extraMimeEntries[] = {
     {APPLICATION_PDF, "pdf", "Portable Document Format"},
     {APPLICATION_POSTSCRIPT, "ps,eps,ai", "Postscript File"},
     {APPLICATION_XJAVASCRIPT, "js", "Javascript Source File"},
-    {APPLICATION_XJAVASCRIPT, "jsm", "Javascript Module Source File"},
+    {APPLICATION_XJAVASCRIPT, "jsm,mjs", "Javascript Module Source File"},
 #ifdef MOZ_WIDGET_ANDROID
     {"application/vnd.android.package-archive", "apk", "Android Package"},
 #endif
